--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -3,39 +3,49 @@
   #profile {
     display: flex;
     background-color: var(--bg-color);
+    justify-content: space-between;
+    color: var(--alabaster-grey);
 
-    #right-profile {
-      color: var(--alabaster-grey);
+    #profile-left-column {
       font-size: 60px;
-      margin-left: 100px;
+      width: 30%;
       font-weight: bolder;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+      align-items: center;
 
       #email {
-        font-size: 40px;
+        font-size: 30px;
+      }
+    }
+
+    #profile-right-column {
+      width: 30%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .right-info {
+      display: flex;
+      align-items: center;
+
+      span:first-of-type {
+        font-size: 80px;
       }
 
-      #experience {
-        display: flex;
-        align-items: center;
-
-        span:first-of-type {
-          font-size: 80px;
-        }
-
-        span:nth-of-type(2) {
-          margin-left: 20px;
-          font-size: 20px;
-          width: 10px;
-        }
+      span:nth-of-type(2) {
+        margin-left: 20px;
+        font-size: 20px;
+        width: 10px;
       }
     }
 
     img {
       width: 500px;
-      padding-left: 40px;
+      position: relative;
+      top: 4px;
     }
   }
 
@@ -46,7 +56,65 @@
     margin-top: 50px;
   }
 
-  #education, #experience {
+  #technologies {
+    background-color: var(--bg-color);
+
+    #technologies-wrapper {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+  }
+
+  #education, #experience, #technologies, #projects {
     padding-bottom: 50px;
+  }
+
+  #projects {
+
+    @for $i from 0 to 4 {
+      @if $i % 2 == 1 {
+        .project-wrapper-#{$i} {
+          background: var(--bg-color);
+
+          span, p {
+            color: var(--alabaster-grey);
+          }
+        }
+      } @else {
+        span, p {
+          color: var(--dark-teal);
+        }
+      }
+    }
+
+    .project-wrapper {
+      display: flex;
+      flex-direction: row;
+
+      .project-image {
+        background-color: var(--alabaster-grey);
+        padding: 20px;
+        margin: 40px 20px;
+        border-radius: 4%;
+
+        img {
+          width: 800px;
+        }
+      }
+
+      .project-description {
+        padding-top: 20px;
+
+        span {
+          font-size: 50px;
+          font-weight: bolder;
+        }
+
+        p {
+          font-size: 20px;
+        }
+      }
+    }
   }
 }
