--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,29 +6,13 @@ header {
   background-color: var(--bg-color);
   color: var(--header-font-color);
 
-  div:first-of-type {
-    font-family: "Momo signature", sans-serif;
-    font-size: 80px;
-    padding-left: 40px;
-  }
-
-  div:nth-of-type(2) {
-    position: relative;
-    right: 80px;
-    width: 50%;
+  #sections {
     font-size: xxx-large;
-    display: flex;
-    justify-content: space-between;
-
-    a {
-      text-transform: uppercase;
-      font-weight: bolder;
-      padding: 15px;
-    }
-  }
-
-  p {
     font-weight: bolder;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
   }
 
   div:last-of-type {
