--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,6 +5,15 @@ header {
   padding: 20px;
   background-color: var(--bg-color);
   color: var(--header-font-color);
+  position: sticky;
+  top: 0;
+
+  @media (max-width: 1200px) {
+    position: static;
+    flex-direction: column;
+    align-items: start;
+    border-bottom: 3px solid var(--alabaster-grey);
+  }
 
   #sections {
     font-size: xxx-large;
@@ -13,6 +22,23 @@ header {
     display: flex;
     justify-content: space-around;
     width: 70%;
+
+    a {
+      margin: 0 10px;
+    }
+
+    a {
+      text-decoration: none;
+      color: var(--alabaster-grey)
+    }
+
+    @media (max-width: 1200px) {
+      padding-left: 40px;
+      margin-top: 20px;
+      order: 2;
+      flex-direction: column;
+      gap: 40px;
+    }
   }
 
   div:last-of-type {
@@ -21,6 +47,18 @@ header {
     align-items: center;
     font-size: xx-large;
     padding-left: 40px;
+
+    @media (max-width: 1200px) {
+      padding-left: 0;
+      p {
+        order: 2;
+        padding-left: 15px;
+      }
+
+      #phone-icon {
+        order: 1;
+      }
+    }
 
     #phone-icon {
       color: var(--dark-teal);
